Fix z-index issue with Header dividers

--- a/app/components/Header/header.module.css
+++ b/app/components/Header/header.module.css
@@ -3,6 +3,7 @@
     height : 200px;
     max-width: 100%;
     position: relative;
+    z-index: 1;
 }
 
 
